<resources>
    <string name="app_name">Benevent</string>

    <!--Nav view name-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Menu Name-->
    <string name="menu_event">Evènements</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_qrcode">Scan Event</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_association">Associations</string>

    <!--Settings Strings-->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Déconnexion</string>

    <!--Hint Strings-->
    <string name="hint_name">Nom</string>
    <string name="hint_firstname">Prénom</string>
    <string name="hint_age">Date de naissance</string>
    <string name="hint_email">Adresse Mail</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_asso">asso</string>
    <string name="hint_event_name">nom de l\'évent</string>
    <string name="hint_event_dateD">dateDeb de l\'évent</string>
    <string name="hint_event_dateF">dateFin de l\'évent</string>
    <string name="hint_localisation">localisation de l\'évent</string>
    <string name="hint_event_maxB">maxBenevole de l\'évent</string>
    <string name="hint_event_desc">description de l\'évent</string>
    <string name="hint_website">Site internet</string>
    <string name="hint_support">support de l\'asso</string>
    <string name="hint_category_name">category</string>
    <string name="hint_phone">N° de telephone</string>

    <!--Logo Strings-->
    <string name="asso_logo">asso logo</string>
    <string name="calendar_logo">calendar logo</string>
    <string name="place_logo">place logo</string>
    <string name="group_logo">group logo</string>
    <string name="info_logo">logo d\'informations</string>

    <!--Label Strings-->
    <string name="connexion_label">Connexion</string>
    <string name="signup_label">S\'inscrire</string>
    <string name="email_label">Adresse @ :</string>
    <string name="phone_label">téléphone :</string>
    <string name="website_label">Site internet :</string>
    <string name="support_label">Soutenir :</string>
    <string name="info_label">Informations :</string>
    <string name="scan_qrcode_label">Scan QRcode</string>

    <!--Other-->
    <string name="bienvenue">Bienvenue sur Benevent</string>
    <string name="bug_text">Déclarer un bug ?</string>
    <string name="feedback_string">Envoyer le feedback</string>
    <string name="feedback_content_string">Maximum 255 caractères</string>
    <string name="object_feedback_string">objet</string>
    <string name="title_feedback">Envoyer un Feedback</string>
    <string name="app_logo">Logo</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="no_account">Pas encore de compte ?</string>
    <string name="view_arrow">view arrow</string>
    <string name="qr_edit_text">Enter Text Here</string>
    <string name="qr_button_generate">Click Here TO generate qr code</string>
    <string name="qr_button_scan">Scan Your QR Code</string>
    <string name="text_here">TextHere</string>
    <string name="qrcode">QrCode</string>
    <string name="menu_category">Categories</string>
    <string name="btn_suivre">Suivre</string>
    <string name="inscrire_label">Inscription</string>
    <string name="mon_profil">Mon Profil</string>
    <string name="event_title">Titre de l\'évènement</string>
    <string name="post_message_title">Publier un message</string>
    <string name="post_title">Publier</string>
</resources>