<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_feed" />
        <item
            android:id="@+id/nav_asso"
            android:icon="@drawable/ic_group_black"
            android:title="@string/menu_association"
            />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_event" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_qrcode"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_qrcode" />
    </group>
</menu>