<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.fragment.QRcodeFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:layout_margin="20dp" >


        <EditText
            android:id="@+id/editText"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"


            android:inputType="text"
            android:hint="@string/qr_edit_text"
            android:autofillHints="@string/qr_edit_text"
            android:gravity="center" />

        <Button
            android:id="@+id/button"

            android:layout_width="fill_parent"
            android:layout_height="50dp"

            android:text="@string/qr_button_generate"
            android:textSize="16sp"
            android:textAllCaps="false" />


        <Button
            android:id="@+id/btnScan"

            android:layout_width="fill_parent"
            android:layout_height="50dp"

            android:text="@string/qr_button_scan"
            android:textSize="16sp"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/tv_qr_readTxt"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/text_here" />


        <ImageView
            android:id="@+id/imageView"

            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@android:drawable/ic_dialog_email"

            android:contentDescription="@string/qrcode" />


    </LinearLayout>


</LinearLayout>