<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Activity.SigninActivity" >

    <ImageView
        android:id="@+id/app_logo"
        android:contentDescription="@string/app_logo"

        android:layout_width="200dp"
        android:layout_height="160dp"
        android:background="@drawable/logo_image"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/welcome_title" />

    <TextView
        android:id="@+id/welcome_title"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/bienvenue"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"

        android:layout_marginBottom="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/log_ed" />

    <EditText
        android:id="@+id/log_ed"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_border"
        android:ems="15"

        android:hint="@string/hint_email"
        android:autofillHints="@string/hint_email"
        android:inputType="textEmailAddress"
        android:gravity="center"


        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/pass_ed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/pass_ed"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_border"
        android:ems="15"

        android:hint="@string/hint_password"
        android:autofillHints="@string/hint_password"
        android:inputType="textPassword"
        android:gravity="center"

        android:layout_marginTop="350dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_signin"

        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/round_corner_blue"

        android:text="@string/connexion_label"
        android:textSize="12sp"
        android:textColor="@color/colorWhite"

        android:onClick="Signin"

        app:layout_constraintTop_toBottomOf="@+id/pass_ed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/no_account"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="100dp"
        android:paddingEnd="0dp"

        android:text="@string/no_account"
        android:textColor="@color/colorBlack"

        android:layout_marginBottom="10dp"
        app:layout_constraintRight_toLeftOf="@+id/no_account_button"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/no_account_button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="100dp"

        android:text="@string/signup_label"
        android:textColor="@color/colorBlue"

        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toRightOf="@+id/no_account"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>