<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.FeedbackFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_feedback"
        android:textSize="25dp"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/object_feedback"/>

    <EditText
        android:id="@+id/object_feedback"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/object_feedback_string"
        android:background="@drawable/back_border"
        android:gravity="center_vertical"
        android:inputType="textPersonName"
        android:maxLength="50"
        app:layout_constraintBottom_toTopOf="@+id/content_feedback"
        app:layout_constraintStart_toStartOf="@+id/content_feedback"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/content_feedback"
        android:layout_width="350dp"
        android:layout_height="135dp"
        android:ems="10"
        android:hint="@string/feedback_content_string"
        android:inputType="text|textMultiLine"
        android:gravity="center_vertical"
        android:maxLength="255"
        android:background="@drawable/back_border"
        android:singleLine="false"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/switch_bug"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Switch
        android:id="@+id/switch_bug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bug_text"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <Button
        android:id="@+id/button_feedback"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/feedback_string"
        android:background="@drawable/round_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_bug" />


</androidx.constraintlayout.widget.ConstraintLayout>