<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Activity.SignupActivity">

    <Button
        android:id="@+id/button_signup_send"

        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/round_corner_blue"
        android:onClick="Signup"
        android:text="@string/signup_label"
        android:textColor="@color/colorWhite"

        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_signup" />

    <EditText
        android:id="@+id/name_signup"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/hint_name"

        android:background="@drawable/background_border"
        android:ems="15"
        android:gravity="center"
        android:hint="@string/hint_name"

        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_signup" />

    <EditText
        android:id="@+id/firstname_signup"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/hint_firstname"

        android:background="@drawable/background_border"
        android:ems="15"
        android:gravity="center"
        android:hint="@string/hint_firstname"

        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_signup" />

    <EditText
        android:id="@+id/age_signup"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/hint_age"

        android:background="@drawable/background_border"
        android:ems="15"
        android:gravity="center"
        android:hint="@string/hint_age"
        android:inputType="date"

        android:maxLength="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname_signup" />

    <EditText
        android:id="@+id/email_signup"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/hint_email"

        android:background="@drawable/background_border"
        android:ems="15"
        android:gravity="center"
        android:hint="@string/hint_email"

        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_signup" />

    <EditText
        android:id="@+id/password_signup"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/hint_password"

        android:background="@drawable/background_border"
        android:ems="15"
        android:gravity="center"
        android:hint="@string/hint_password"

        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_signup" />
    <EditText
        android:id="@+id/phone_signup"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/hint_phone"
        android:inputType="phone"
        android:background="@drawable/background_border"
        android:ems="15"
        android:gravity="center"
        android:hint="@string/hint_phone"
        android:maxLength="12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_signup" />

    <TextView
        android:id="@+id/title_signup"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="70dp"
        android:text="@string/signup_label"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"

        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profil_picture_signup"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/button_signup_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_signup"
        app:layout_constraintEnd_toStartOf="@id/button_upload_signup"
        android:src="@drawable/logo_image" />

    <Button
        android:id="@+id/button_upload_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_blue"
        android:text="Changer d'image"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button_signup_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profil_picture_signup"
        app:layout_constraintTop_toBottomOf="@+id/password_signup" />

</androidx.constraintlayout.widget.ConstraintLayout>